# Fix-Spotify

./: .gitignore  README.md  RELEASE_NOTES_v1.2.1.md  backend.spec  build_backend.ps1
.github/workflows/: build-android.yml  build-release.yml  deploy-docs.yml
api/: main.py  requirements.txt
components/: download_manager.py  fuzz_compat.py  fuzzy_matcher.py  home.py  itunes_client.py  jiosaavn_downloader.py  metadata_enricher.py  musicbrainz_client.py  profile.py  radio.py  soundcloud_downloader.py  source_merger.py  spotify_import.py  test_radio_sources.py  test_soundcloud_format.py  unified_search.py  youtube_downloader.py
docs/: USER_GUIDE.md  fair-use.md  index.md  package-lock.json  package.json  releases.md
docs/.vitepress/: config.mjs
docs/guide/: downloads.md  equalizer.md  finding-music.md  installation.md  introduction.md  library.md  lyrics.md  player.md  quick-start.md  spotify-import.md
docs/reference/: architecture.md  settings.md  sound.md  troubleshooting.md
frontend/: eslint.config.js  index.html  index.mobile.html  package-lock.json  package.json  vite.config.mobile.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: backend.rs  commands.rs  download.rs  main.rs
mobile/: GUIDE.md  README.md  build-apk.bat  get-crash-log.bat
mobile/android/: build.gradle  gradle.properties  gradlew  settings.gradle
mobile/python/: android_env.py  mobile_server.py  (+3 more)
(+95 files in other folders)
